# gd32_temp

./: .gitignore  CMakeLists.txt  GD32E230.svd  README.md  openocd_gd32e230f4.cfg
cmake/: toolchain.cmake
inc/: main.h  peripheral.h  systick.h  wc_bldc_control.h
ld/: gd32e23x_gcc.ld  gd_e230f4_gcc.ld
sdk/: CMakeLists.txt
sdk/CMSIS/src/: system_gd32e23x.c
src/: gd32e23x_it.c  main.c  peripheral.c  systick.c  wc_bldc_control.c
startup/: startup_gd32e23x.S
